create room app and add room models

--- a/core/templates/include/header.html
+++ b/core/templates/include/header.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{% static 'css/core/header.css' %}">
     <link rel="stylesheet" href="{% static 'css/core/footer.css' %}">
     <link rel="stylesheet" href="{% static 'css/core/roomlist.css' %}">
+    <link rel="stylesheet" href="{% static 'css/core/roomdetail.css' %}">
 
 </head>
 
