--- a/rooms/templates/seller_include/sidebar.html
+++ b/rooms/templates/seller_include/sidebar.html
@@ -31,8 +31,8 @@
                         Rooms</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="#"><i class="fas fa-shopping-cart me-2"></i>
                         Orders</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="#"><i class="fas fa-chart-line me-2"></i>
-                        Analytics</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_profile'%}"><i class="fas fa-user me-2"></i>
+                        Profile</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="#"><i class="fas fa-cog me-2"></i>
                         Settings</a></li>
             </ul>
@@ -59,8 +59,8 @@
                                 Products</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="#"><i
                                     class="fas fa-shopping-cart me-2"></i> Orders</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#"><i
-                                    class="fas fa-chart-line me-2"></i> Analytics</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_profile'%}"><i
+                                    class="fas fa-user me-2"></i> Profile</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="#"><i class="fas fa-cog me-2"></i>
                                 Settings</a></li>
                     </ul>
