--- a/core/templates/core/roomlist.html
+++ b/core/templates/core/roomlist.html
@@ -33,7 +33,7 @@
                                     access</p>
                                 <div class="d-flex justify-content-between align-items-center flex-lg-column">
                                     <span class="h5 mb-0 room-price">$65/night</span>
-                                    <a href="{% url 'roomdetail' %}" class="text-decoration-none m-3 btn-primary-custom listroom-btn">View Details</a>
+                                    <a href="{% url 'roomdetail' room.slug %}" class="text-decoration-none m-3 btn-primary-custom listroom-btn">View Details</a>
                                 </div>
                             </div>
                         </div>
