--- a/rooms/templates/seller/seller_dashboard.html
+++ b/rooms/templates/seller/seller_dashboard.html
@@ -2,8 +2,6 @@
 {% load static %}
 {% block content %}
 
-
-
             <!-- Main Content -->
             <div class="flex-grow-1 p-4 welcome-content">
                 <div class="seller-dash-header d-flex justify-content-between">
@@ -54,7 +52,7 @@
                     </div>
                 </div>
 
-                <!-- Listed Products Table -->
+                <!-- Listed rooms Table -->
                 <h4 class="Listed-Rooms-header fw-bold fs-3">Listed Rooms</h4>
                 <button class="btn-s-dashboard-add-room mb-3 p-2 fw-bold">
                     <a href="{% url 'add_rooms' %}">Add New Room</a>
