--- a/rooms/templates/seller_include/sidebar.html
+++ b/rooms/templates/seller_include/sidebar.html
@@ -27,10 +27,10 @@
             <ul class="nav flex-column mt-3">
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_dashboard' %}"><i class="fas fa-home me-2"></i>
                         Dashboard</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}"><i class="fas fa-box me-2"></i>
+                <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}"><i class="fas fa-bed me-2"></i>
                         Rooms</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="#"><i class="fas fa-shopping-cart me-2"></i>
-                        Orders</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="#"><i class="far fa-calendar-check me-2"></i>
+                        Appointments</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_profile'%}"><i class="fas fa-user me-2"></i>
                         Profile</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="#"><i class="fas fa-cog me-2"></i>
@@ -53,16 +53,11 @@
                 </div>
                 <div class="offcanvas-body">
                     <ul class="nav flex-column">
-                        <li class="nav-item"><a class="nav-link text-white" href="#"><i class="fas fa-home me-2"></i>
-                                Dashboard</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#"><i class="fas fa-box me-2"></i>
-                                Products</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#"><i
-                                    class="fas fa-shopping-cart me-2"></i> Orders</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_profile'%}"><i
-                                    class="fas fa-user me-2"></i> Profile</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#"><i class="fas fa-cog me-2"></i>
-                                Settings</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_dashboard' %}"><i class="fas fa-home me-2"></i>Dashboard</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}"><i class="fas fa-bed me-2"></i>Rooms</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#"><i class="far fa-calendar-check me-2"></i> Appointments</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_profile'%}"><i class="fas fa-user me-2"></i> Profile</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#"><i class="fas fa-cog me-2"></i>Settings</a></li>
                     </ul>
                 </div>
             </div>
