--- a/static/css/core/header.css
+++ b/static/css/core/header.css
@@ -60,3 +60,61 @@ html {
 }
 
 /* navbar */
+
+/* header */
+/* Icon styling */
+.header i {
+    margin-right: 10px;
+    font-size: 1.3rem;
+    color: #3dc3c8;
+    vertical-align: middle;
+    /* Align icon with text */
+}
+
+/* Header span styling */
+.header-span {
+    font-size: 1rem;
+    color: #3dc3c8;
+    padding-left: 1.5px;
+    /* margin-left: 2px; */
+}
+
+.header-forcart,
+.header-forlogout,
+.header-forname {
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: 600;
+    margin-left: 20px;
+    transition: color 0.3s ease;
+    display: flex;
+    align-items: center;
+}
+
+.header-forcart {
+    margin-left: 20px;
+}
+
+.header-forcart {
+    position: relative;
+    display: inline-block;
+    color: #fff;
+    font-size: 16px;
+}
+
+.header-cart-quantity {
+    position: absolute;
+    top: -8px;
+    left: 18px;
+    background-color: #e74c3c;
+    color: #000;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 1;
+    z-index: 1;
+}
+
+
+/* header */
