--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <!-- Right side of the Carousel -->
-            <div class="col-lg-4 col-md-3 col-12 order-2 d-flex flex-column justify-content-center"">
+            <div class="col-lg-4 col-md-3 col-12 order-2 d-flex flex-column justify-content-center">
                 <h1 class=" fw-bold text-center text-md-start carousel-right-content">Room Rental</h1>
                 <h4 class="fw-light text-center text-md-start carousel-right-content">"Elevate Your Living Experience
                     with Us"
