--- a/core/templates/include/header.html
+++ b/core/templates/include/header.html
@@ -32,12 +32,15 @@
                         <p class="fw-bold fs-7 m-1">Log in First...</p>
                     {% endif %}
                 </div>
-
                 <div class="col-6 text-white p-2 d-flex justify-content-end main-header">
-                    <a href="" class="header-forcart me-5" data-bs-toggle="modal" data-bs-target="#notificationModal">
-                        <i class="fa fa-bell"></i>
-                        <span class="header-cart-quantity">5</span>
+                    {% if user.is_authenticated %}
+                    <a href="" class="header-fornotification" data-bs-toggle="modal" data-bs-target="#notificationModal">
+                        <i class="fa fa-bell cust-fa-bell fs-5"></i>
+                        {% if unread_notifications_count > 0 %}
+                        <span class="header-notification-quantity">{{ unread_notifications_count }}</span>
+                        {% endif %}                        
                     </a>
+                    {% endif %}
                     <a href="#" class="text-white text-decoration-none">
                         {% if user.is_authenticated %}
                             {% if user.name %}
@@ -104,12 +107,16 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
                     <div class="modal-body">
-                            <p> You have registerd successfully</p>
-                            <p> You have Logined successfully</p>
-                            <p>No new notifications</p>
+                        {% if notifications %}
+                            {% for notification in notifications %}
+                            <p>{% if notification.is_read %}<strong class="text-muted">[Read]</strong>{% endif %} {{ notification.message }}</p>
+                            {% endfor %}
+                        {% else %}
+                        <p>No new notifications</p>
+                        {% endif %}
                     </div>
                     <div class="modal-footer">
-                        <form method="POST">
+                        <form method="POST" action="{% url 'customer_mark_notifications_as_read' %}">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-primary">Mark as Read</button>
                         </form>
